updates removes config files

--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,15 @@ app.*.symbols
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 !/dev/ci/**/Gemfile.lock
+.vscode/launch.json
+
+**/google-services.json
+**/GoogleService-info.plist
+lib/firebase_options.dart
+/.idea/misc.xml
+/.idea/libraries/Dart_Packages.xml
+/.idea/libraries/Flutter_Plugins.xml
+/.idea/vcs.xml
+/.idea/shelf/Changes/shelved.patch
+/.idea/shelf/Changes.xml
+/.idea/caches/deviceStreaming.xml
