--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,4 @@ app.*.symbols
 **/GoogleService-info.plist
 lib/firebase_options.dart
 /.idea
-.DS_Store
-.DS_Store
-ios/.DS_Store
-ios/.DS_Store
+**/.DS_Store
